Improved and refined public review page content infrastructure. Added test data. Improved tests. Fixed some minor issues.